--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -32,8 +32,8 @@ jobs:
           echo "[flake8]" > .flake8
           echo "extend-ignore = E402" >> .flake8
           echo "exclude = .github,autoop/tests" >> .flake8
-          # exclude A101, A102, D100
-          echo "ignore = A101,A102,D100" >> .flake8
+          # exclude A101, A102, D100 and everything that starts with D2 and D4
+          echo "ignore = A101,A102,D100,D2,D4" >> .flake8
 
       - name: Run flake8
         uses: suo/flake8-github-action@releases/v1
